Fix 'The Latest' text on mobile

--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ header {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 5;
+    z-index: 10;
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.5);
 }
 
@@ -287,6 +287,7 @@ main #main-overlay {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    z-index: 5;
 }
 
 main #main-overlay h1 {
